find all places for which trending topics are available

--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -9,19 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import configparser\n",
-    "from TwitterAPI import TwitterAPI"
+    "from TwitterAPI import TwitterAPI\n",
+    "import sys\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -59,14 +61,29 @@
     "        if request.status_code == 200:\n",
     "            return request\n",
     "        else:\n",
-    "            print >> sys.stderr, 'Got error:', request.text, '\\nsleeping for 15 minutes.'\n",
+    "            print('Got error:', request.text, '\\nsleeping for 15 minutes.', file=sys.stderr)\n",
     "            sys.stderr.flush()\n",
-    "            time.sleep(61 * 15)\n"
+    "            time.sleep(61 * 15)\n",
+    "\n",
+    "def find_trends(twitter, location):\n",
+    "    topics = robust_request(twitter, 'trends/place', {'id': location}, 20)\n",
+    "    trends = []\n",
+    "    for t in topics:\n",
+    "        topic = \"%d\\t%s\\t%s\\t%s\\t%s\\t%s\\n\" %(location, t['name'], t['url'], str(t['tweet_volume']), t['promoted_content'], t['query'])\n",
+    "        trends.append(topic)\n",
+    "    return trends\n",
+    "\n",
+    "def find_places(twitter):\n",
+    "    places = robust_request(twitter, 'trends/available',{}, 20)\n",
+    "    place_ids = []\n",
+    "    for p in places:\n",
+    "        place_ids.append(p['woeid'])\n",
+    "    return place_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -86,55 +103,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "topics = robust_request(twitter, 'trends/place', {'id':'1'})"
+    "places = find_places(twitter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "50\n"
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n"
      ]
     }
    ],
    "source": [
-    "count = 0\n",
-    "trending = []\n",
-    "for t in topics:\n",
-    "    #print(t['name'])\n",
-    "    topic = \"1\\t%s\\t%s\\t%s\\t%s\\t%s\\n\" %(t['name'], t['url'], str(t['tweet_volume']), t['promoted_content'], t['query'])\n",
-    "    trending.append(topic)\n",
-    "    count += 1\n",
-    "\n",
-    "\n",
-    "print(count)"
+    "# TODO - add headers\n",
+    "#with open('topics.csv', 'w') as tsv_file:\n",
+    "for woeid in places:\n",
+    "    trends = find_trends(twitter, woeid)\n",
+    "    with open('topics.csv', 'a') as tsv_file:\n",
+    "        for topic in trends:\n",
+    "            tsv_file.write(topic)\n",
+    "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# TODO - add headers\n",
-    "with open('topics.csv', 'w') as tsv_file:\n",
-    "    for topic in trending:\n",
-    "        tsv_file.write(topic)\n"
+    "Started at 8:31 PM. Failed, then restarted at 8:33 PM. Failed at 8:55 & restarted.\n",
+    "\n",
+    "Started at 10:58. Reached rate limit at 11:00\n",
+    "Started at 12:49am. Failed at 3:10am (almost done)\n",
+    "Started at 4:24am"
    ]
   }
  ],
