add column headers, location names, environment file

--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -73,17 +73,24 @@
     "        trends.append(topic)\n",
     "    return trends\n",
     "\n",
-    "def find_places(twitter):\n",
+    "def find_place_ids(twitter):\n",
     "    places = robust_request(twitter, 'trends/available',{}, 20)\n",
     "    place_ids = []\n",
     "    for p in places:\n",
     "        place_ids.append(p['woeid'])\n",
-    "    return place_ids"
+    "    return place_ids\n",
+    "\n",
+    "def find_places(twitter):\n",
+    "    places = robust_request(twitter, 'trends/available',{}, 20)\n",
+    "    all_places = []\n",
+    "    for p in places:\n",
+    "        all_places.append(p)\n",
+    "    return all_places"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -103,18 +110,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "places = find_places(twitter)"
+    "places = find_place_ids(twitter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_places = find_places(twitter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Okayama\n"
+     ]
+    }
+   ],
+   "source": [
+    "myid = 90036018\n",
+    "for p in my_places:\n",
+    "    if p['woeid'] == myid:\n",
+    "        print(p['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -124,19 +164,41 @@
      "output_type": "stream",
      "text": [
       "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
       "sleeping for 15 minutes.\n"
      ]
     }
    ],
    "source": [
+    "with open('newtopics.csv', 'a') as tsv_file:\n",
+    "    tsv_file.write('Location Name\\tWOE ID\\tName\\tURL\\tEvents\\tPromoted?\\tQuery\\n')\n",
+    "\n",
     "# TODO - add headers\n",
     "#with open('topics.csv', 'w') as tsv_file:\n",
-    "for woeid in places:\n",
-    "    trends = find_trends(twitter, woeid)\n",
-    "    with open('topics.csv', 'a') as tsv_file:\n",
-    "        for topic in trends:\n",
-    "            tsv_file.write(topic)\n",
-    "    "
+    "\n",
+    "for place in places:\n",
+    "    try:\n",
+    "        trends = find_trends(twitter, place)\n",
+    "        \n",
+    "        for p in my_places:\n",
+    "            if p['woeid'] == place:\n",
+    "                name = p['name']\n",
+    "        with open('newtopics.csv', 'a') as tsv_file:\n",
+    "            #print(trends[0])\n",
+    "            for topic in trends:\n",
+    "                tsv_file.write(name+'\\t'+ topic)\n",
+    "    except (Timeout, ssl.SSLError, ReadTimeoutError, ConnectionError) as exc:\n",
+    "        print(\"error: %s\" % exc)\n",
+    "        sleep(60*5)"
    ]
   },
   {
@@ -147,8 +209,19 @@
     "\n",
     "Started at 10:58. Reached rate limit at 11:00\n",
     "Started at 12:49am. Failed at 3:10am (almost done)\n",
-    "Started at 4:24am"
+    "Started at 4:24am\n",
+    "\n",
+    "Started at 3PM 1/7. Done before 5PM (after 4:30 I think)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
