filter all topics list for keywords (17)

--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -90,19 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Established Twitter connection.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "twitter = get_twitter('settings.cfg')\n",
     "print('Established Twitter connection.')"
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -132,19 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Okayama\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myid = 90036018\n",
     "for p in my_places:\n",
@@ -154,32 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n",
-      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
-      "sleeping for 15 minutes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('newtopics.csv', 'a') as tsv_file:\n",
+    "with open('trending-topics-01-24-2016.csv', 'a') as tsv_file:\n",
     "    tsv_file.write('Location Name\\tWOE ID\\tName\\tURL\\tEvents\\tPromoted?\\tQuery\\n')\n",
     "\n",
     "# TODO - add headers\n",
@@ -192,7 +157,7 @@
     "        for p in my_places:\n",
     "            if p['woeid'] == place:\n",
     "                name = p['name']\n",
-    "        with open('newtopics.csv', 'a') as tsv_file:\n",
+    "        with open('trending-topics-01-24-2016.csv', 'a') as tsv_file:\n",
     "            #print(trends[0])\n",
     "            for topic in trends:\n",
     "                tsv_file.write(name+'\\t'+ topic)\n",
@@ -221,6 +186,59 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "topics_17 = []\n",
+    "with open('trending-topics-01-24-2016.csv', 'r') as tsv_file:\n",
+    "    for line in tsv_file:\n",
+    "        row = line.split()\n",
+    "        if '17' in row[2]:\n",
+    "            topics_17.append(row)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "topics_17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(topics_17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('trending-topics-17-01-24-2016.csv', 'w') as tsv_file:\n",
+    "    for topic in topics_17:\n",
+    "        row = \"%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n\" %(topic[0], topic[1], topic[2], topic[3], topic[4], topic[5], topic[6])\n",
+    "        tsv_file.write(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
@@ -240,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
