--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -85,16 +85,33 @@
     "    all_places = []\n",
     "    for p in places:\n",
     "        all_places.append(p)\n",
-    "    return all_places"
+    "    return all_places\n",
+    "\n",
+    "def extract_topics(infile, outfile, keyword):\n",
+    "    topics = []\n",
+    "    with open(infile, 'r') as tsv_file:\n",
+    "        for line in tsv_file:\n",
+    "            row = line.split()\n",
+    "            if keyword in row[2]:\n",
+    "                topics.append(row)\n",
+    "    return topics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Established Twitter connection.\n"
+     ]
+    }
+   ],
    "source": [
     "twitter = get_twitter('settings.cfg')\n",
     "print('Established Twitter connection.')"
@@ -102,62 +119,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "places = find_place_ids(twitter)"
+    "config = configparser.ConfigParser()\n",
+    "config.read('settings.cfg')\n",
+    "all_topics = config.get('files', 'all_topics')\n",
+    "filtered_topics = config.get('files', 'all_topics')\n",
+    "filter_term = config.get('files', 'filter_term')\n",
+    "\n",
+    "place_ids = find_place_ids(twitter)\n",
+    "places = find_places(twitter)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n",
+      "Got error: {\"errors\":[{\"message\":\"Rate limit exceeded\",\"code\":88}]} \n",
+      "sleeping for 15 minutes.\n"
+     ]
+    }
+   ],
    "source": [
-    "my_places = find_places(twitter)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "myid = 90036018\n",
-    "for p in my_places:\n",
-    "    if p['woeid'] == myid:\n",
-    "        print(p['name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "with open('trending-topics-01-24-2016.csv', 'a') as tsv_file:\n",
+    "with open(all_topics, 'w') as tsv_file:\n",
     "    tsv_file.write('Location Name\\tWOE ID\\tName\\tURL\\tEvents\\tPromoted?\\tQuery\\n')\n",
     "\n",
-    "# TODO - add headers\n",
-    "#with open('topics.csv', 'w') as tsv_file:\n",
-    "\n",
-    "for place in places:\n",
+    "for pid in place_ids:\n",
     "    try:\n",
-    "        trends = find_trends(twitter, place)\n",
+    "        trends = find_trends(twitter, pid)\n",
     "        \n",
-    "        for p in my_places:\n",
-    "            if p['woeid'] == place:\n",
+    "        for p in places:\n",
+    "            if p['woeid'] == pid:\n",
     "                name = p['name']\n",
-    "        with open('trending-topics-01-24-2016.csv', 'a') as tsv_file:\n",
+    "        with open('all_topics', 'a') as tsv_file:\n",
     "            #print(trends[0])\n",
     "            for topic in trends:\n",
     "                tsv_file.write(name+'\\t'+ topic)\n",
@@ -187,12 +204,12 @@
    },
    "outputs": [],
    "source": [
-    "topics_17 = []\n",
-    "with open('trending-topics-01-24-2016.csv', 'r') as tsv_file:\n",
+    "filtered = []\n",
+    "with open(filtered_topics, 'r') as tsv_file:\n",
     "    for line in tsv_file:\n",
     "        row = line.split()\n",
-    "        if '17' in row[2]:\n",
-    "            topics_17.append(row)\n",
+    "        if filter_term in row[2]:\n",
+    "            filtered.append(row)\n",
     "        "
    ]
   },
@@ -204,7 +221,15 @@
    },
    "outputs": [],
    "source": [
-    "topics_17"
+    "def extract_topics(infile, outfile, keyword):\n",
+    "    topics = []\n",
+    "    with open(infile, 'r') as tsv_file:\n",
+    "        for line in tsv_file:\n",
+    "            row = line.split()\n",
+    "            if keyword in row[2]:\n",
+    "                topics.append(row)\n",
+    "    return topics\n",
+    "                "
    ]
   },
   {
@@ -226,7 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('trending-topics-17-01-24-2016.csv', 'w') as tsv_file:\n",
+    "with open(filtered, 'w') as tsv_file:\n",
     "    for topic in topics_17:\n",
     "        row = \"%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n\" %(topic[0], topic[1], topic[2], topic[3], topic[4], topic[5], topic[6])\n",
     "        tsv_file.write(row)"
@@ -258,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
