send email to multiple addresses

--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -626,6 +626,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'marc.smith.email@gmail.com'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config = configparser.ConfigParser()\n",
+    "config.read('settings.cfg')\n",
+    "\n",
+    "email_addresses = config.get('email', 'to')\n",
+    "email_addresses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "marc.smith.email@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "email_list = email_addresses.split(',')\n",
+    "\n",
+    "for address in email_list:\n",
+    "    print(address)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -650,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
