wip add regions

--- a/trending-topics.ipynb
+++ b/trending-topics.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -182,12 +182,42 @@
     "            if topic[5] > 1:\n",
     "                row = \"%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n\" %(topic[0], topic[1], topic[2], topic[3], topic[4], topic[5])\n",
     "                tsv_file.write(row)\n",
-    "\n"
+    "\n",
+    "def add_regions(original_file, region_file):\n",
+    "    topics_with_regions = []\n",
+    "    region_list = []\n",
+    "    with open(region_file, 'r') as regions:\n",
+    "        for line in regions:\n",
+    "            row = line.split('\\t')\n",
+    "            region_list.append(row)\n",
+    "\n",
+    "    with open(original_file, 'r') as topics:\n",
+    "        for line in topics:\n",
+    "            row = line.split('\\t')\n",
+    "            loc = row[0]\n",
+    "            print(\"location: %s\" %(loc))\n",
+    "            for region in region_list:\n",
+    "                #regions = region.split(',')\n",
+    "                new_loc = region[0]\n",
+    "                #print(\"compare to: %s\" %(new_loc))\n",
+    "                if loc == new_loc:\n",
+    "                    print(\"adding: %f %f %s %s\") %(region[1], region[2], region[3], region[4])\n",
+    "                    row.extend([region[1], region[2], region[3], region[4]])\n",
+    "            topics_with_regions.append(row)\n",
+    "\n",
+    "    reg_filename = \"regions-\" + original_file\n",
+    "    with open(reg_filename, 'w') as tsv_file:\n",
+    "        tsv_file.write('Location Name\\tWOE ID\\tName\\tEvents\\tPromoted?\\tCount\\tLatitude\\tLongitude\\tNation\\tRegion\\n')     \n",
+    "\n",
+    "        for topic in topics_with_regions:\n",
+    "            print(row)\n",
+    "            row = \"%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n\" %(topic[0], topic[1], topic[2], topic[3], topic[4], topic[5], topic[6], topic[7], topic[8], topic[9])\n",
+    "            tsv_file.write(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -207,6 +237,47 @@
     "\n",
     "all_topics = prefix + '-' + datestring + '.csv'\n",
     "filtered_topics = prefix + '-' + filter_term + '-' + datestring + '.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Add regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "location: Location Name\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'split'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-b38c8a39f06b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0minfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'trending-topics-17-2017-03-08.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0madd_regions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-22-0605592fd94a>\u001b[0m in \u001b[0;36madd_regions\u001b[0;34m(original_file, region_file)\u001b[0m\n\u001b[1;32m    164\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"location: %s\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mregion\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mregion_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 166\u001b[0;31m                 \u001b[0mregions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    167\u001b[0m                 \u001b[0mnew_loc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m                 \u001b[0;31m#print(\"compare to: %s\" %(new_loc))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'split'"
+     ]
+    }
+   ],
+   "source": [
+    "regions = 'region-locations.csv'\n",
+    "infile = 'trending-topics-17-2017-03-08.csv'\n",
+    "\n",
+    "add_regions(infile, regions)"
    ]
   },
   {
